# Flappy-Bird

./: CMakeLists.txt  Math.hpp  main.cpp
